# cautious-computing-machine

./: .env.example  .gitignore  README.md  README_ENTRY_POINTS.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: aardwolf_gmcp_migration.md  architecture.md  mud_agent_migration.md  state_manager_migration.md  supabase_delete_triggers.sql
docs/plans/: 2026-02-16-local-first-sync-design.md  2026-02-16-local-first-sync.md  2026-02-17-exit-recording-fixes-design.md  2026-02-17-exit-recording-fixes.md  2026-02-20-smart-buff-management-design.md  2026-02-20-smart-buff-management.md  2026-02-27-combat-skill-rotation-design.md  2026-02-27-combat-skill-rotation.md
src/.mcp/: config.json
src/mud_agent/: __init__.py  __main__.py  __main__textual_reactive.py
src/mud_agent/db/: models.py  (+4 more)
tests/: conftest.py  test_config.py  test_exit_constraint.py  test_fallback_logic.py  test_helper.py  test_logging.py  test_mcp_manager.py  test_mcp_tools.py  test_mud_agent.py  test_mud_client_tool.py  test_pathfinding_fixes.py  test_protocols.py  test_refactored_code.py  test_room_manager.py  test_status_widget.py  test_status_widgets.py
tests/agent/: test_buff_manager.py  test_combat_skill_manager.py  test_command_processor.py  test_command_processor_splitting.py  test_decision_engine.py  test_learned_skills.py  test_quest_alert.py  test_quest_manager.py  test_room_manager_exit.py  test_room_manager_implicit_debug.py  test_room_manager_implicit_limit.py
tests/client/: test_mud_client_keepalive.py
tests/config/: test_agent_config.py
tests/db/: test_models.py  test_sync_models.py  test_sync_worker.py
tests/mcp/: test_game_knowledge_graph.py  test_game_knowledge_graph_chain_command.py  test_game_knowledge_graph_direction_mismatch.py  test_game_knowledge_graph_enter.py  test_game_knowledge_graph_enter_collision.py  test_game_knowledge_graph_enter_pool.py  test_game_knowledge_graph_enter_portal.py  test_game_knowledge_graph_push_off.py  test_game_knowledge_graph_scan_fix.py
tests/protocols/: test_aardwolf_gmcp.py
tests/reproduction/: test_enter_portal_real_kg.py
tests/state/: test_state_manager.py
tests/textual_app/: test_commands.py  test_events.py  test_gmcp_manager.py  test_layout_config.py  test_server_comm.py  test_styles.py  test_widget_updater.py
tests/utils/: test_initialization.py
(+82 files in other folders)
